Промежуточный коммит