@@ -1,6 +1,9 @@
 package ru.alamics.sso.keycloak.entity.provider;
 
+import ru.alamics.sso.keycloak.entity.AutoLockNotification;
+import ru.alamics.sso.keycloak.entity.Post;
 import ru.alamics.sso.keycloak.entity.UserLoginHistory;
+import ru.alamics.sso.keycloak.entity.UserPost;
 
 import java.util.Collections;
 import java.util.List;
@@ -12,7 +15,7 @@ public class CustomJpaEntityProvider implements org.keycloak.connections.jpa.ent
 
     @Override
     public List<Class<?>> getEntities () {
-        return Collections.singletonList(UserLoginHistory.class);
+        return List.of(UserLoginHistory.class, Post.class, System.class, UserPost.class);
     }
 
     @Override
